# maple

./: .env.example  .gitignore  README.md  colors.txt  maple_erd.drawio  mypy.ini  pyproject.toml
containers/: docker-compose.yml
src/app/: __main__.py  config.py  maple.py  maple_config.py  password_poc.py
src/app/dto/: entities.py  models.py  repos.py
src/app/enums/: enums.py
src/app/helpers/: balance_change_helper.py  process_csv_helper.py  transaction_hash_helper.py
src/sql/: 01-create-tables.sql  02-categories.sql  03-intervals.sql  03-timespans.sql  04-account-types.sql  05-transaction-sources.sql
